# TPG-Estimator

./: 2_state_MDP.ipynb  README.md  RideSim.md  data0.csv  manhattan-nodes.parquet  nonstat_queue.ipynb  pyproject.toml  requirements.txt  ride_sharing.ipynb  rideshare.py  taxi-zones.parquet
configs/: naive-AB.yaml  pure-A.yaml  pure-B.yaml  switchback.yaml
picard/: nn.py  rideshare_dispatch.py
