[tool.poetry]
name = "dn-ridesharing"
version = "0.1.0"
description = "Ridesharing experiment with switchback testing"
authors = ["Andy Zheng <azheng92@gmail.com>", "Tianyi Peng <tp2845@columbia.edu>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
jax = "0.5.2"
flax = "^0.10.6"
chex = "^0.1.89"
jaxtyping = "^0.2.38"
gymnax = "^0.0.8"
pooch = "^1.8.2"
pandas = "^2.2.3"
funcy = "^2.0"
haversine = "^2.9.0"
sacred = "^0.8.7"
tqdm = "^4.67.1"
numpy = "^1.24.3"
pyarrow = "^20.0.0"
ipython = "^9.2.0"
setuptools = "^80.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 